--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dabox-ble-proto",
+  "name": "movie-capacitor",
   "version": "0.2.0",
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
